# johansen-null-eigenspectra

./: .gitignore  AGENTS.md  BUILD.md  CHANGELOG.md  Cargo.toml  DATA_FORMAT.md  Dockerfile  F_MATRIX.md  LAPACK_SETUP.md  LIBRARY_USAGE.md  README.md  analyze_dat_quality.sh
.agents/: code-generation.md  documentation.md  git-workflow.md  performance.md  testing.md
.agents/git-workflow/: branch-management.md  code-review.md  collaboration.md  commit-guidelines.md  special-notes.md  version-update.md
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/releases/: RELEASE_NOTES_v0.2.6.md  RELEASE_NOTES_v0.2.9.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.6.1.md  RELEASE_NOTES_v0.6.2.md  RELEASE_NOTES_v0.7.0.md  RELEASE_NOTES_v0.8.0.md
.github/workflows/: release.yml
examples/: library_usage_example.rs  readme_example.rs
src/: cli.rs  data_storage.rs  display_utils.rs  johansen_models.rs  johansen_statistics.rs  lib.rs  main.rs  matrix_utils.rs  rng_matrix.rs  simulation_analyzers.rs
src/data_storage/: append_writer.rs  binary_io.rs  config.rs  file_format.rs  mod.rs  parallel_compute.rs  progress.rs  reader.rs  resumable_writer.rs  simulation.rs  stream_writer.rs  thread_manager.rs  uleb128.rs  writer.rs
src/tests/: display_utils_test.rs  johansen_models_test.rs  mod.rs
tests/: binary_io_test.rs  data_storage_test.rs  display_utils_test.rs  johansen_models_test.rs  matrix_utils_test.rs  rng_matrix_test.rs  uleb128_test.rs  uleb128_unit_test.rs
tests/data_storage/: main.rs  (+2 more)
(+31 files in other folders)
